# cookiecutter-data-science

./: README.md  cookiecutter.json  pyproject.toml
hooks/: pre_gen_project.py
tests/: conftest.py  test_creation.py
{{ cookiecutter.repo_name }}/: .env  .pre-commit-config.yaml  Makefile  pyproject.toml  setup.cfg
{{ cookiecutter.repo_name }}/docs/: commands.rst
