[tool.poetry]
name = "cookiecutter-data-science-poetry"
version = "0.1.0"
description = "A data science project template adapted from <http://drivendata.github.io/cookiecutter-data-science/>"
authors = ["Jasper Ginn <jasperginn@gmail.com>"]
maintainers = ["Jasper Ginn <jasperginn@gmail.com>"]
repository = "https://github.com/JasperHG90/cookiecutter-data-science"

[tool.poetry.dependencies]
python = "^3.8, <3.10"
cookiecutter = "^1.7.2"
toml = "^0.10.2"
PyYAML = "^5.4.1"
mkdocs = "^1.2.1"
mkdocs-cinder = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.12.1"
pytest = "^5.2"
pytest-cov = "^2.11.1"
pydocstyle = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
